--- a/h5client/src/Life/bin/index.html
+++ b/h5client/src/Life/bin/index.html
@@ -45,6 +45,7 @@
 	<!--删除标签，ide不会自动添加js文件，请谨慎操作-->
 	<!--jsfile--startTag-->
 	<script src="js/entities/Person.js"></script>
+	<script src="js/entities/Building.js"></script>
 	<script src="js/base/GM.js"></script>
 	<script src="js/base/Game.js"></script>
 	<script src="js/base/Actor.js"></script>
