--- a/h5client/src/Life/bin/index.html
+++ b/h5client/src/Life/bin/index.html
@@ -44,16 +44,17 @@
 	<!--自定义的js(src文件夹下)文件自动添加到下面jsfile模块标签里面里-->
 	<!--删除标签，ide不会自动添加js文件，请谨慎操作-->
 	<!--jsfile--startTag-->
-	<script src="js/entities/Person.js"></script>
-	<script src="js/entities/Building.js"></script>
+	<script src="js/utils/AStar.js"></script>
 	<script src="js/base/GM.js"></script>
 	<script src="js/base/Game.js"></script>
 	<script src="js/base/Actor.js"></script>
 	<script src="js/base/Group.js"></script>
 	<script src="js/base/Layer.js"></script>
 	<script src="js/base/Scene.js"></script>
+	<script src="js/entities/Building.js"></script>
 	<script src="js/entities/GameMap.js"></script>
 	<script src="js/entities/MapCell.js"></script>
+	<script src="js/entities/Person.js"></script>
 	<script src="js/LifeGame.js"></script>
 	<script src="js/ui/layaUI.max.all.js"></script>
 	<script src="js/utils/Data.js"></script>
